--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>Odin Recipes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<h1>Odin Recipes</h1>
-<ul>
-  <li><a href="recipes/hamburger.html">Hamburger Recipe</a></li>
-  <li><a href="recipes/macnch.html">Macaroni and Cheese Recipe</a></li>
-  <li><a href="recipes/ctaco.html">Chicken Taco Recipe</a></li>
-</ul>
+<div id="box">
+ <h1 class="homepage">Odin Recipes</h1>
+  <ul class="link">
+    <li><a href="recipes/hamburger.html">Hamburger Recipe</a></li>
+    <li><a href="recipes/macnch.html">Macaroni and Cheese Recipe</a></li>
+    <li><a href="recipes/ctaco.html">Chicken Taco Recipe</a></li>
+  </ul>
+</div>
 </body>
 
 </html>
